# dagster_to_agents

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.chat-agent  README.md  SPOT_SEARCH_ACTIVITY_PIPELINE.md  appspec.yml  buildspec.yml  inspect_parquet_schema.py  start.sh
chat-agent/: Dockerfile  README.md  mcp.json  pyproject.toml  railway.toml  test_claude_cli.sh
chat-agent/src/chat_agent/: agent.py  config.py  google_auth.py  main.py  progress_tracker.py  tools.py
chat-agent/src/dagster_mcp/: __init__.py  __main__.py  server.py
dagster-pipeline/: .gitignore  ARCHITECTURE.md  GOLD_TABLES_SCHEMA.md  README.md  dagster.yaml  pyproject.toml
dagster-pipeline/docs/data_lakehouse/: governance-spot-counts.md
dagster-pipeline/docs/golden_tables/: README.md  bt_con_conversations.md  bt_lds_lead_spots.md  bt_transactions.md  lk_leads.md  lk_matches_visitors_to_leads.md  lk_okrs.md  lk_projects.md  lk_spots.md  lk_users.md
dagster-pipeline/docs/references/: PRIVACY-POLICY.md  company-context.md  data-lineage.md  edge-cases-and-gotchas.md  entities.md  metrics-definition.md  sql-queries.md
dagster-pipeline/scripts/: get_gold_schemas.py  load_parquet_to_geospot.py  query_s3_example.py  query_s3_tables.py
dagster-pipeline/src/dagster_pipeline/: definitions.py
dagster-pipeline/tests/: __init__.py  flow_registry.py  test_harness.py
lakehouse-sdk/: .gitignore  CONNECTORX_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  PATH_FIX_SUMMARY.md  QUICKSTART.md  README.md  TRANSLATION_SUMMARY.md  pyproject.toml  setup.sh
lakehouse-sdk/ad_hoc/: README.md
lakehouse-sdk/ad_hoc/bt_lds_spot_added_channels_2025-12-10/: PRD-Atribucion-Canal-Spots-v2.md  PRD-Atribucion-Canal-Spots.md  README.md  validate_sources.py
lakehouse-sdk/ad_hoc/conversion_visitante_lead_2026-04-08/: browse_pages_spec.md  q_browse_first_branches.sql  q_browse_sessions.sql  q_browse_urls_ventana.sql  reporte_browse_pages_spot2.md  test_browse_sessions.py  test_channel_consistency.py  test_v4_vs_v5.py  test_volume_diagnostic.py  test_vtl_v1_vs_v2.py  validacion_browse_pages.md
lakehouse-sdk/ad_hoc/gsc_spots_performance_2026-03-26/: query.py  transform.py
lakehouse-sdk/notebooks/bronze/: example_bronze.ipynb
lakehouse-sdk/notebooks/gold/: lk_leads.ipynb
lakehouse-sdk/notebooks/silver/: example_silver.ipynb  lk_lds.ipynb  lk_projects.ipynb
lakehouse-sdk/sql/: bt_lds_lead_spots.sql  bt_spot_amenities.sql  lk_effective_supply.sql  lk_effective_supply_category_effects.sql  lk_effective_supply_drivers.sql  lk_effective_supply_model_metrics.sql  lk_effective_supply_propensity_scores.sql  lk_effective_supply_rules.sql  lk_leads_v2.sql  lk_projects_v2.sql  rpt_amenity_description_consistency.sql  rpt_funnel_ptd.sql
lakehouse-sdk/sql/old/:  funnel_with_channel_v2 .sql  Data Adquisición.md  (+13 more)
lakehouse-sdk/tests/: README.md  test_loader.py
(+466 files in other folders)
