[project]
name = "lakehouse-sdk"
version = "0.1.0"
description = "SDK for testing and development of Spot2 Data Lakehouse"
requires-python = ">=3.10,<3.14"
dependencies = [
    "polars==1.35.2",
    "dagster==1.11.7",
    "boto3>=1.40.19",
    "mysql-connector-python==9.5.0",
    "pandas>=2.3.2",
    "pyarrow>=18.0.0",
    "python-dateutil>=2.8.0",
    "connectorx>=0.3.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

